Archive2/9c/96a45281fc1887/output
main.cpp: In function 'int main()':
main.cpp:12:11: error: 'get_time' is not a member of 'std'
     ss >> std::get_time(&t, "%Y-%b-%d %H:%M:%S");
           ^
main.cpp:13:18: error: 'put_time' is not a member of 'std'
     std::cout << std::put_time(&t, "%c") << '\n';
                  ^
